# voiceRover

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
patches/: pico_tflmicro_limits_fix.patch
sandbox/: Gatt-peripheral.py  ble_demo.py  btRover.py  btRoverCentral.py  echo.py  gatt.py  lineRober.py  playback.py  record.py  test.py
src/: dsp_pipeline.cpp  dsp_pipeline.h  main.cpp  ml_model.cpp  ml_model.h  tflite_model.h
test/: CMakelists.txt  main.c
tools/: read_spectrum.py  requirements.txt
training/: model.tflite  training.ipynb
